--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
+    "resize-observer-polyfill": "^1.5.1",
     "sweetalert2": "^11.10.7",
     "swiper": "^7.4.1",
     "typescript": "^4.9.5",
